# Robot_Project

./: .env.example  .gitignore  CHANGES_SUMMARY.md  DYNAMIC_TREE_GUIDE.md  README.md  demo.sh  index.html  server.py  start_all.sh  test_demo.py  web_ui.py
brain/: brain_node.py  requirements.txt
cerebellum/: CMakeLists.txt  main.cpp
docs/: java_backend_api.md
